--- a/package.json
+++ b/package.json
@@ -5,20 +5,21 @@
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.8.1",
     "@brainhubeu/react-carousel": "^1.15.2",
+    "@types/react-router-dom": "^5.1.5",
     "@types/socket.io-client": "^1.4.32",
     "@zoomus/websdk": "^1.7.7",
-    "redux": "3.7.2",
-    "react-redux": "7.1.0",
     "jquery": "^3.4.1",
     "lodash": "^4.17.14",
-    "redux-thunk": "2.2.0",
     "passport-auth0": "^1.3.2",
     "react": "^16.12.0",
     "react-awesome-slider": "^4.1.0",
     "react-chat-widget": "3.0.2",
     "react-dom": "^16.12.0",
+    "react-redux": "7.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "redux": "3.7.2",
+    "redux-thunk": "2.2.0",
     "socket.io-client": "^2.3.0",
     "typescript": "^3.8.3"
   },
