Use new Auth0 app

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 REACT_APP_SERVER_URL=http://127.0.0.1:3000
 REACT_APP_AUTH0_DOMAIN=humorchat.auth0.com
 REACT_APP_AUTH0_CLIENT_ID=1fzSh9nuQUsS3UCjvyzAprL1WkVSW6KA
+REACT_APP_AUTH0_DOMAIN=experimentsplatform.auth0.com
+REACT_APP_AUTH0_CLIENT_ID=tMtf58n2klIFK8D5uQ1tgcz7e8oaRaiO
