--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ REACT_APP_AUTH0_DOMAIN=humorchat.auth0.com
 REACT_APP_AUTH0_CLIENT_ID=1fzSh9nuQUsS3UCjvyzAprL1WkVSW6KA
 REACT_APP_AUTH0_DOMAIN=experimentsplatform.auth0.com
 REACT_APP_AUTH0_CLIENT_ID=tMtf58n2klIFK8D5uQ1tgcz7e8oaRaiO
+REACT_APP_API_DOMAIN="localhost:3000"
