--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/socket.io-client": "^1.4.32",
     "@zoomus/websdk": "^1.7.7",
+    "axios": "^0.19.2",
     "jquery": "^3.4.1",
     "lodash": "^4.17.14",
     "passport-auth0": "^1.3.2",
@@ -47,6 +48,7 @@
     "eslint-plugin-react": "^7.18.3",
     "prettier": "^1.19.1"
   },
+  "proxy": "http://localhost:3000",
   "scripts": {
     "client": "PORT=3001 react-scripts start",
     "server": "cd server && yarn start",
