--- a/server/package.json
+++ b/server/package.json
@@ -5,34 +5,59 @@
   "private": true,
   "dependencies": {
     "body-parser": "^1.19.0",
+    "command-line-args": "^5.1.1",
+    "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.4",
     "debug": ">=4.1.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.0",
-    "humor-api": "../humor-api/lib",
+    "express-async-errors": "^3.1.1",
+    "express-routes-catalogue": "^1.1.0",
+    "express-session": "^1.17.1",
+    "helmet": "^3.22.0",
+    "http-status-codes": "^1.4.0",
+    "install": "^0.13.0",
+    "mongoose": "^5.9.16",
     "morgan": ">=1.9.1",
+    "passport": "^0.4.1",
+    "passport-auth0": "^1.3.2",
     "pm2": "^3.5.0",
+    "pug": "^3.0.0",
     "rotating-file-stream": "^1.4.1",
     "socket.io": "^2.3.0",
-    "unirest": "^0.6.0"
+    "winston": "^3.2.1"
+  },
+  "_moduleAliases": {
+    "@daos": "dist/daos",
+    "@entities": "dist/entities",
+    "@shared": "dist/shared",
+    "@server": "dist/Server"
   },
   "devDependencies": {
+    "@types/command-line-args": "^5.0.0",
     "@types/cookie-parser": "^1.4.1",
     "@types/debug": "^4.1.4",
     "@types/express": "^4.16.1",
+    "@types/express-session": "^1.17.0",
+    "@types/helmet": "^0.0.47",
+    "@types/jsonfile": "^6.0.0",
+    "@types/mongoose": "^5.7.21",
     "@types/morgan": "^1.7.35",
+    "@types/passport": "^1.0.3",
+    "@types/passport-auth0": "^1.0.4",
     "@types/socket.io": "^2.1.4",
     "nodemon": "^1.19.0",
     "rimraf": "^2.6.3",
     "ts-node": "^8.1.0",
     "tslint": "^6.0.0",
     "tslint-microsoft-contrib": "^6.2.0",
-    "typescript": "^3.4.5"
+    "typescript": "^3.9"
   },
   "scripts": {
-    "start": "nodemon --exec \"ts-node\" ./src/index.ts",
+    "start": "nodemon --exec \"ts-node\" ./src/index.ts --env=development",
     "start-prod": "pm2 start ./build/index.js start-prod --no-daemon -f",
     "stop-prod": "pm2 stop",
-    "build": "rimraf -fR && tsc"
+    "build": "rimraf -fR && tsc && cp -r src/views build"
   },
   "engines": {
     "node": ">= 10.15.3"
