--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "humor-server",
+  "name": "server",
   "version": "0.0.1",
   "license": "MIT",
   "private": true,
@@ -21,7 +21,7 @@
     "morgan": ">=1.9.1",
     "passport": "^0.4.1",
     "passport-auth0": "^1.3.2",
-    "pm2": "^3.5.0",
+    "pm2": "^4.4.0",
     "pug": "^3.0.0",
     "rotating-file-stream": "^1.4.1",
     "socket.io": "^2.3.0",
@@ -60,6 +60,6 @@
     "build": "rimraf -fR && tsc && cp -r src/views build"
   },
   "engines": {
-    "node": ">= 10.15.3"
+    "node": ">= 14"
   }
 }
