--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -15,7 +15,7 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
+    "isolatedModules": false,
     "outDir": "./build"
   },
   "include": ["./src"],
