--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,12 @@
     "@material-ui/icons": "^4.9.1",
     "@types/react-router-dom": "^5.1.5",
     "@types/socket.io-client": "^1.4.32",
-    "@zoomus/websdk": "^1.7.7",
+    "@zoomus/websdk": "^1.7.8",
     "axios": "^0.19.2",
     "jquery": "^3.4.1",
     "lodash": "^4.17.14",
     "passport-auth0": "^1.3.2",
+    "random-words": "^1.1.1",
     "react": "^16.12.0",
     "react-awesome-slider": "^4.1.0",
     "react-chat-widget": "3.0.2",
