--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^3.0.2",
     "body-parser": "^1.19.0",
     "command-line-args": "^5.1.1",
     "connect-mongo": "^3.2.0",
@@ -46,11 +47,15 @@
     "@types/passport": "^1.0.3",
     "@types/passport-auth0": "^1.0.4",
     "@types/socket.io": "^2.1.4",
+    "@typescript-eslint/parser": "^3.0.2",
+    "eslint": "^6.6.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.18.3",
     "nodemon": "^1.19.0",
+    "prettier": "^1.19.1",
     "rimraf": "^2.6.3",
     "ts-node": "^8.1.0",
-    "tslint": "^6.0.0",
-    "tslint-microsoft-contrib": "^6.2.0",
     "typescript": "^3.9"
   },
   "scripts": {
