--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,12 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/socket.io-client": "^1.4.32",
     "@zoomus/websdk": "^1.7.8",
+    "api": "../api/lib",
     "axios": "^0.19.2",
     "jquery": "^3.4.1",
     "lodash": "^4.17.14",
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.2.2",
     "passport-auth0": "^1.3.2",
     "random-words": "^1.1.1",
     "react": "^16.12.0",
