--- a/api/package.json
+++ b/api/package.json
@@ -3,8 +3,11 @@
   "version": "0.0.1",
   "license": "MIT",
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "mongoose": "^5.9.17"
+  },
   "devDependencies": {
+    "@types/mongoose": "^5.7.21",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "eslint": "^6.0.0",
