--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,13 @@
     "@brainhubeu/react-carousel": "^1.15.2",
     "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.55",
     "@types/react-router-dom": "^5.1.5",
     "@types/socket.io-client": "^1.4.32",
     "@zoomus/websdk": "^1.7.8",
     "api": "../api/lib",
     "axios": "^0.19.2",
+    "final-form": "^4.20.0",
     "jquery": "^3.4.1",
     "lodash": "^4.17.14",
     "mobx": "^5.15.4",
@@ -22,6 +24,7 @@
     "react-awesome-slider": "^4.1.0",
     "react-chat-widget": "3.0.2",
     "react-dom": "^16.12.0",
+    "react-final-form": "^6.5.0",
     "react-redux": "7.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
