--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-chat-widget": "3.0.2",
     "react-dom": "^16.12.0",
     "react-final-form": "^6.5.0",
+    "react-papaparse": "^3.3.0",
     "react-redux": "7.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
