--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.14",
     "mobx": "^5.15.4",
     "mobx-react": "^6.2.2",
+    "moment": "^2.26.0",
     "passport-auth0": "^1.3.2",
     "react": "^16.12.0",
     "react-awesome-slider": "^4.1.0",
