--- a/client/.env.production
+++ b/client/.env.production
@@ -1,2 +1,2 @@
-REACT_APP_SERVER_URL=https://iep-prod.herokuapp.com
-REACT_APP_API_DOMAIN=https://iep-prod.herokuapp.com
+REACT_APP_SERVER_URL=https://experimentalist.herokuapp.com
+REACT_APP_API_DOMAIN=https://experimentalist.herokuapp.com
