--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@zoomus/websdk": "^1.7.8",
     "api": "../api/lib",
     "axios": "^0.19.2",
+    "env-cmd": "^10.1.0",
     "final-form": "^4.20.0",
     "jquery": "^3.4.1",
     "lodash": "^4.17.14",
