--- a/api/package.json
+++ b/api/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@types/mongoose": "^5.7.21",
+    "@types/socket.io-client": "^1.4.33",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "eslint": "^6.0.0",
