--- a/client/.env.qa
+++ b/client/.env.qa
@@ -1,2 +1,3 @@
 REACT_APP_SERVER_URL=https://iep-prod.herokuapp.com
+REACT_APP_SOCKET_SERVER_URL=https://iep-prod.herokuapp.com
 REACT_APP_API_DOMAIN=https://iep-prod.herokuapp.com
