Add Sentry error detection

--- a/client/.env.qa
+++ b/client/.env.qa
@@ -1,3 +1,4 @@
 REACT_APP_SERVER_URL=https://iep-prod.herokuapp.com
 REACT_APP_SOCKET_SERVER_URL=https://iep-prod.herokuapp.com
 REACT_APP_API_DOMAIN=https://iep-prod.herokuapp.com
+REACT_APP_SENTRY_URL="https://76d68621614749e699f7d0c8612530d6@o56372.ingest.sentry.io/5284746"
