--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "mobx": "^5.15.4",
     "mobx-react": "^6.2.2",
     "moment": "^2.26.0",
+    "mui-rte": "^1.23.1",
     "passport-auth0": "^1.3.2",
     "react": "^16.12.0",
     "react-awesome-slider": "^4.1.0",
@@ -28,6 +29,7 @@
     "react-dom": "^16.12.0",
     "react-final-form": "^6.5.0",
     "react-papaparse": "^3.3.0",
+    "react-quill": "^2.0.0-beta.2",
     "react-redux": "7.1.0",
     "react-rnd": "^10.1.10",
     "react-router-dom": "^5.2.0",
@@ -47,6 +49,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/brainhubeu__react-carousel": "^1.13.1",
+    "@types/draft-js": "^0.10.41",
     "@types/jest": "^25.1.2",
     "@types/node": "^13.7.2",
     "@types/react": "^16.9.20",
