Add faker for models

--- a/client/package.json
+++ b/client/package.json
@@ -49,16 +49,19 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/brainhubeu__react-carousel": "^1.13.1",
     "@types/draft-js": "^0.10.41",
+    "@types/faker": "^4.1.12",
     "@types/jest": "^25.1.2",
     "@types/node": "^13.7.2",
     "@types/react": "^16.9.20",
     "@types/react-dom": "^16.9.5",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
+    "cooky-cutter": "^1.5.4",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
+    "faker": "^4.1.0",
     "http-proxy-middleware": "^1.0.4",
     "prettier": "^1.19.1"
   },
