--- a/server/package.json
+++ b/server/package.json
@@ -48,6 +48,7 @@
     "@types/morgan": "^1.7.35",
     "@types/passport": "^1.0.3",
     "@types/passport-auth0": "^1.0.4",
+    "@types/passport-local": "^1.0.33",
     "@types/socket.io": "^2.1.4",
     "@typescript-eslint/parser": "^3.0.2",
     "eslint": "^6.6.0",
@@ -55,6 +56,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
     "nodemon": "^1.19.0",
+    "passport-local": "^1.0.0",
     "prettier": "^1.19.1",
     "rimraf": "^2.6.3",
     "ts-node": "^8.1.0",
