Added basic attendance skeleton

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,4 +1,10 @@
 {
+  "ts-node": {
+    "ignoreDiagnostics": [
+      "2454",
+      "2403"
+    ]
+  },
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
