--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
     "@sentry/browser": "^5.17.0",
     "@types/react-router-dom": "^5.1.5",
     "@types/socket.io-client": "^1.4.32",
-    "@zoomus/websdk": "^1.7.8",
+    "@zoomus/websdk": "1.7.8",
     "api": "../api/lib",
     "axios": "^0.19.2",
     "env-cmd": "^10.1.0",
@@ -49,6 +49,7 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/brainhubeu__react-carousel": "^1.13.1",
     "@types/draft-js": "^0.10.41",
+    "@types/enzyme": "^3.10.5",
     "@types/faker": "^4.1.12",
     "@types/jest": "^25.1.2",
     "@types/node": "^13.7.2",
@@ -57,6 +58,8 @@
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "cooky-cutter": "^1.5.4",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
