--- a/client/package.json
+++ b/client/package.json
@@ -50,6 +50,7 @@
     "@types/brainhubeu__react-carousel": "^1.13.1",
     "@types/draft-js": "^0.10.41",
     "@types/enzyme": "^3.10.5",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/faker": "^4.1.12",
     "@types/jest": "^25.1.2",
     "@types/node": "^13.7.2",
@@ -57,6 +58,7 @@
     "@types/react-dom": "^16.9.5",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
+    "axios-mock-adapter": "^1.18.1",
     "cooky-cutter": "^1.5.4",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
@@ -76,6 +78,11 @@
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public"
+  },
+  "jest": {
+    "watchPathIgnorePatterns": [
+      "__playbacks__"
+    ]
   },
   "eslintConfig": {
     "extends": "react-app"
