--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ jobs:
           steps:
             - run: cd client && yarn install
             - run: cd client && node_modules/eslint/bin/eslint.js src --ext .js,.jsx,.ts,.tsx
+            - run: cd client && yarn test
             - run: cd server && yarn install
             - run: cd server && node_modules/eslint/bin/eslint.js src --ext .js,.jsx,.ts,.tsx
 workflows:
