--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "@sentry/node": "5.19.0",
     "@typescript-eslint/eslint-plugin": "^3.0.2",
     "api": "../api/lib",
     "body-parser": "^1.19.0",
