--- a/server/package.json
+++ b/server/package.json
@@ -43,7 +43,9 @@
     "@types/debug": "^4.1.4",
     "@types/express": "^4.16.1",
     "@types/express-session": "^1.17.0",
+    "@types/faker": "^4.1.12",
     "@types/helmet": "^0.0.47",
+    "@types/jest": "^26.0.4",
     "@types/jsonfile": "^6.0.0",
     "@types/mongoose": "^5.7.21",
     "@types/morgan": "^1.7.35",
@@ -52,14 +54,18 @@
     "@types/passport-local": "^1.0.33",
     "@types/socket.io": "^2.1.4",
     "@typescript-eslint/parser": "^3.0.2",
+    "cooky-cutter": "^1.5.4",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
+    "faker": "^4.1.0",
+    "jest": "^26.1.0",
     "nodemon": "^1.19.0",
     "passport-local": "^1.0.0",
     "prettier": "^1.19.1",
     "rimraf": "^2.6.3",
+    "ts-jest": "^26.1.1",
     "ts-node": "^8.1.0",
     "typescript": "^3.9"
   },
@@ -67,7 +73,8 @@
     "start": "nodemon --exec \"ts-node\" ./src/index.ts",
     "start-prod": "pm2 start ./build/index.js start-prod --no-daemon -f",
     "stop-prod": "pm2 stop",
-    "build": "rimraf -fR && tsc && cp -r src/views build"
+    "build": "rimraf -fR && tsc && cp -r src/views build",
+    "test": "jest"
   },
   "engines": {
     "node": ">= 14"
