--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "@sentry/node": "5.19.0",
     "@typescript-eslint/eslint-plugin": "^3.0.2",
     "api": "../api/lib",
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "command-line-args": "^5.1.1",
     "connect-mongo": "^3.2.0",
