--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "command-line-args": "^5.1.1",
     "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "debug": ">=4.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.0",
@@ -41,6 +42,7 @@
   "devDependencies": {
     "@types/command-line-args": "^5.0.0",
     "@types/cookie-parser": "^1.4.1",
+    "@types/cors": "^2.8.6",
     "@types/debug": "^4.1.4",
     "@types/express": "^4.16.1",
     "@types/express-session": "^1.17.0",
@@ -72,6 +74,7 @@
   },
   "scripts": {
     "start": "nodemon --exec \"ts-node\" ./src/index.ts",
+    "dev": "nodemon --exec \"node --inspect -r ts-node/register ./src/index.ts\"",
     "start-prod": "pm2 start ./build/index.js start-prod --no-daemon -f",
     "stop-prod": "pm2 stop",
     "build": "rimraf -fR && tsc && cp -r src/views build",
