--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.19.2",
     "env-cmd": "^10.1.0",
     "final-form": "^4.20.0",
+    "flagged": "^2.0.1",
     "jquery": "^3.4.1",
     "lodash": "^4.17.14",
     "mobx": "^5.15.4",
