--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
             - run: cd client && yarn install
             - run: cd client && node_modules/eslint/bin/eslint.js src --ext .js,.jsx,.ts,.tsx
             - run: cd client && yarn test
-            - run: cd server && yarn install
+            - run: cd server && yarn install && yarn upgrade api
             - run: cd server && node_modules/eslint/bin/eslint.js src --ext .js,.jsx,.ts,.tsx
             - run: cd server && ./node_modules/.bin/tsc
             # - run: cd server && ./node_modules/.bin/jest
