--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "react": "^16.12.0",
     "react-awesome-slider": "^4.1.0",
     "react-chat-widget": "3.0.2",
+    "react-device-detect": "^1.13.1",
     "react-dom": "^16.12.0",
     "react-final-form": "^6.5.0",
     "react-papaparse": "^3.3.0",
