--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "react-final-form": "^6.5.0",
     "react-fullstory": "^1.4.0",
     "react-papaparse": "^3.3.0",
+    "react-paypal-button-v2": "^2.6.2",
     "react-redux": "7.1.0",
     "react-rnd": "^10.1.10",
     "react-router-dom": "^5.2.0",
