--- a/server/package.json
+++ b/server/package.json
@@ -77,7 +77,8 @@
     "start-prod": "pm2 start ./build/index.js start-prod --no-daemon -f",
     "stop-prod": "pm2 stop",
     "build": "rimraf -fR && tsc && cp -r src/views build",
-    "test": "jest --watch"
+    "test": "NODE_ENV=test jest --watch",
+    "test-ci": "NODE_ENV=ci jest"
   },
   "engines": {
     "node": ">= 14"
