--- a/server/package.json
+++ b/server/package.json
@@ -67,6 +67,7 @@
     "passport-local": "^1.0.0",
     "prettier": "^1.19.1",
     "rimraf": "^2.6.3",
+    "socket.io-mock": "^1.3.1",
     "ts-jest": "^26.1.1",
     "ts-node": "^8.1.0",
     "typescript": "^3.9"
