Show conferende rooms in prod/qa

--- a/client/.env.production
+++ b/client/.env.production
@@ -4,3 +4,4 @@ REACT_APP_API_DOMAIN=https://experimentalist.herokuapp.com
 REACT_APP_SENTRY_URL="https://76d68621614749e699f7d0c8612530d6@o56372.ingest.sentry.io/5284746"
 REACT_APP_FULLSTORY_CODE="X23T9"
 REACT_PAY_PAL_CLIENT_ID="ARXj8gVwDm4HVtTkr0Pxhzg0vN0Da2vU_pM6tN-JtOn4WZ0DzWSY7ig1uMi4SLOvddMGhm92jiblAbNu"
+REACT_APP_HIDE_CONFERENCE_ROOMS=false
