--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "mui-rte": "^1.23.1",
     "passport-auth0": "^1.3.2",
     "react": "^16.12.0",
+    "react-detect-offline": "^2.4.0",
     "react-device-detect": "^1.13.1",
     "react-dom": "^16.12.0",
     "react-final-form": "^6.5.0",
