Add smartlook to track users

--- a/client/.env.production
+++ b/client/.env.production
@@ -3,5 +3,6 @@ REACT_APP_SOCKET_SERVER_URL=https://experimentalist.herokuapp.com
 REACT_APP_API_DOMAIN=https://experimentalist.herokuapp.com
 REACT_APP_SENTRY_URL="https://76d68621614749e699f7d0c8612530d6@o56372.ingest.sentry.io/5284746"
 REACT_APP_FULLSTORY_CODE="X23T9"
+REACT_APP_SMARTLOOK_API_KEY="a57e3849d14761744012ca6221c820816376451e"
 REACT_PAY_PAL_CLIENT_ID="ARXj8gVwDm4HVtTkr0Pxhzg0vN0Da2vU_pM6tN-JtOn4WZ0DzWSY7ig1uMi4SLOvddMGhm92jiblAbNu"
 REACT_APP_HIDE_CONFERENCE_ROOMS=
