--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "react-scripts": "3.4.1",
     "redux": "3.7.2",
     "redux-thunk": "2.2.0",
+    "smartlook-client": "^4.6.1",
     "socket.io-client": "^2.3.0",
     "typescript": "^3.9"
   },
