--- a/client/package.json
+++ b/client/package.json
@@ -4,15 +4,18 @@
   "private": true,
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.8.1",
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.55",
+    "@material-ui/pickers": "^3.3.10",
     "@sentry/browser": "^5.17.0",
     "@types/react-router-dom": "^5.1.5",
     "@types/socket.io-client": "^1.4.34",
     "@zoomus/websdk": "1.8.6",
     "axios": "^0.19.2",
     "cloudinary-react": "^1.6.2",
+    "date-fns": "^2.21.1",
     "env-cmd": "^10.1.0",
     "final-form": "^4.20.0",
     "flagged": "^2.0.1",
