--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
+  "license": "GPL-3.0-only",
   "private": true,
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.8.1",
