--- a/models/package.json
+++ b/models/package.json
@@ -1,7 +1,7 @@
 {
   "name": "models",
   "version": "0.0.1",
-  "license": "MIT",
+  "license": "GPL-3.0-only",
   "private": true,
   "dependencies": {
     "fp-ts": "^2.8.1",
